--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -460,6 +460,7 @@ body {
   }
   .landing {
     height: 100vh;
+    background-attachment: scroll;
   }
   .landing .landing-content-position {
     top: 25%;
@@ -483,6 +484,9 @@ body {
     height: 50%;
     width: 100%;
     text-align: center;
+  }
+  .skills-container {
+    background-attachment: scroll;
   }
   .skills-container .skills-position {
     top: 8%;
