--- a/assets/sass/_mobile.scss
+++ b/assets/sass/_mobile.scss
@@ -33,6 +33,7 @@
 
   .landing {
    height: 100vh;
+   background-attachment: scroll;
 
   
 
@@ -76,7 +77,7 @@
 
    .skills-container {
 
-     
+      background-attachment: scroll;
 
       .skills-position {
 
